# ShieldCraft-Engine

./: .gitignore  DISCOVER_AFRICA_GAP_ANALYSIS.md  DISCOVER_AFRICA_RESULTS.md  OPERATIONAL_READINESS.md  PHASE_13A_COMPLETED.md  PHASE_13A_REALITY_CHECK.md  README.md  RELEASE_MANIFEST.json  RELEASE_READY  SE_BOOTSTRAP_COMPLETE.md  SE_REPO_INVENTORY.md  SE_V1_CLOSED.md  STABLE  compatibility_matrix.json  copilot-instructions.md  dsl_field_usage.json  fix_blank_lines.py  pyproject.toml  pytest.ini  repo_ambiguity_report.json  repo_authority_map.json  repo_state_summary.json  repo_state_sync.json  shieldcraft_progress.json  spec_trial_report.json  tmp_bad.spec.json  tmp_bad2.spec.json  tmp_test_spec.json
.out/: test_spec_preview.json
.scanner/: config.yml  stability_report.json
.selfhost_outputs/: sync_actions.json  sync_report.json
artifacts/: repo_sync_state.json
ci/: selfhost_dryrun.yml
demo_runs/: manifest_run1.json  summary_run3.json
demos/: convertible.json  raw_input.txt  structured.json  valid.json
docs/: CHANGELOG.md  CHECKLIST_OUTCOME_CONTRACT.md  CONTEXT_ANCHOR.md  CONTRACTS.md  GOVERNANCE.md  INVARIANTS.md  OPERATIONAL_READINESS.md  README.md  SELF_BUILD.md  SE_STATE.md  SE_V1_CLOSED.md  decision_log.md  implementation_plan.md  phase_13_completion.md  phase_15_execution_plan.md  pr_structure_phase13.md  product.yml  progress.md  self_host_status.md  self_hosting_failure_triage.md  self_hosting_manifest.json  semantic_strictness_decision.md
generators/: lockfile.json
releases/: rc-0.1.0.txt
repo_introspection/: report.json
spec/: README.md  (+4 more)
(+788 files in other folders)
