[tool.poetry]
name = "shieldcraft-engine"
version = "0.1.0"
description = "ShieldCraft Engine - Product Security DSL"
authors = []
packages = [{include = "shieldcraft", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
jsonschema = "^4.21.1"
jinja2 = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
